--- a/_appleClone/css/main.css
+++ b/_appleClone/css/main.css
@@ -93,7 +93,7 @@ a {
   margin: 5px 0;
   height: 3em;
   font-size: 2.5rem;
-  background: rgba(0, 0, 0, 0.2);
+  /* background: rgba(0, 0, 0, 0.2); */
 }
 
 .main-message p {
