--- a/_appleClone/css/main.css
+++ b/_appleClone/css/main.css
@@ -142,6 +142,14 @@ a {
   height: 100px;
   background: rgb(29, 29, 31);
 }
+#scroll-section-2 .b {
+  top: 10%;
+  left: 40%;
+}
+#scroll-section-2 .c {
+  top: 15%;
+  left: 45%;
+}
 
 /* 🔴 section 3 */
 .mid-message {
@@ -219,6 +227,13 @@ a {
   }
   .desc-message {
     width: 20%;
+  }
+  #scroll-section-2 .b {
+    top: 20%;
+    left: 53%;
+  }
+  #scroll-section-2 .c {
+    left: 55%;
   }
 
   /* 🔴 section 3 */
