--- a/_appleClone/css/main.css
+++ b/_appleClone/css/main.css
@@ -83,8 +83,11 @@ a {
 /* 📱 Mobile */
 /* 🔴 section 0 */
 #scroll-section-0 h1 {
+  position: relative;
   font-size: 4rem;
   text-align: center;
+  z-index: 5;
+  top: -10vh;
 }
 
 .main-message {
@@ -137,6 +140,7 @@ a {
 .desc-message {
   width: 50%;
   font-weight: bold;
+  opacity: 0;
 }
 .pin {
   width: 1px;
