--- a/_appleClone/css/main.css
+++ b/_appleClone/css/main.css
@@ -208,6 +208,13 @@ a {
   top: 50%;
   left: 50%;
 }
+.image-blend-canvas {
+}
+#scroll-section-3 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 
 #show-scene-0 #scroll-section-0 .sticky-elem,
 #show-scene-1 #scroll-section-1 .sticky-elem,
