Feat : AppleClone - scroll menu

--- a/_appleClone/css/main.css
+++ b/_appleClone/css/main.css
@@ -43,6 +43,13 @@ a {
   padding: 0 1rem;
   border-bottom: 1px solid #ddd;
 }
+.local-nav-sticky .local-nav {
+  position: fixed;
+  top: 0;
+  background: rgba(255, 255, 255, 0.1);
+  backdrop-filter: saturate(180%) blur(15px);
+}
+
 .global-nav-links,
 .local-nav-links {
   display: flex;
@@ -159,9 +166,9 @@ a {
 
 /* 🔴 section 3 */
 .mid-message {
+  width: 1000px;
   max-width: 1000px;
   margin: 0 auto;
-
   padding: 0 1rem;
   font-size: 2rem;
   color: #888;
@@ -171,7 +178,7 @@ a {
 }
 .canvas-caption {
   max-width: 1000px;
-  margin: 0 auto;
+  margin: -20em auto 0;
 
   padding: 0 1rem;
   font-size: 1.2rem;
@@ -239,6 +246,7 @@ a {
   /* 🔴 section 1 */
   .description {
     font-size: 2rem;
+    padding: 0;
   }
   .description strong {
     font-size: 6rem;
@@ -265,8 +273,11 @@ a {
   /* 🔴 section 3 */
   .mid-message {
     font-size: 4vw;
+    padding: 0;
   }
   .canvas-caption {
     font-size: 2rem;
+    padding: 0;
+    margin: -8em auto 0;
   }
 }
